# MLP_Personas

./: .gitignore  CHANGELOG.md  MODELCARD.md  README.md  architecture-overview.md  index.html  pyproject.toml  requirements.txt
.cursor/agents/: court-reporter.md
.cursor/skills/: README.md
.github/ISSUE_TEMPLATE/: BUG.md
.github/workflows/: python-publish.yml
agents/: README.md  __init__.py
agents/reports/: .gitkeep
agents/skills/: morningstar-transcript-certification.md
agents/templates/: session-state-init.md
agents/tools/: research-report-workflow.md
agents/workflows/: .env.example  README.md  __init__.py  config.yaml  email_sender.py  research_report.py  (+1 more)
checklists/: courtroom-scribe.md
core/: case-format.md  error-recovery.md  inter-agent-protocol.md  procedures.md  state-schema.md
courtroom/: BEST_PRACTICES.md  COURT_PROTOCOL.md  RULES.md  case-registry.yaml  precedents.md  reporter.py  spectators.md
docs/: LIL_JEFF_AUDIT_REPO_2026-02-17.md  RUNBOOK.md  agent-skills.md  court-reporter.md  edge-cases.md  glossary.md
executive/: README.md  __init__.py  consensus.py  judicial_log.py  proof.py  protocol.md  watchdog.py
litigation/: OPENROUTER_BEST_PRACTICES.md  README.md  config.example.yaml  models.py  requirements.txt  run.py  ui.py  viewer.py
references/: naming-conventions.md
scripts/: run-court-reporter.sh
state/: current.md  metrics.md
templates/: contempt-hearing.md  project-dashboard.md  prophet-vindication.md  session-start.md  special-interest-hearing.md
wiki/: Edge-Cases.md  Portal.md  Repository-Map.md  Runbook.md
(+32 files in other folders)
